--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     window.location.href = "yes.html";
                 }
 
-                function moveButton() {
+                function moveutton() {
                     var x = Math.random() * (window.innerWidth - document.getElementById('noButton').offsetWidth) - 85;
                     var y = Math.random() * (window.innerHeight - document.getElementById('noButton').offsetHeight) - 48;
                     document.getElementById('noButton').style.left = `${x}px`;
