--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
         </div>
         <div class = "buttons">
             <button class="btn" id="yesButton" onclick="nextPage()">Yes!!</button>
-            <button class="btn" id="noButton" onmouseover="moveButton()" oneclick="moveButton()">No D:</button>
+            <button class="btn" id="noButton" onclick="nextPage2()">No D:</button>
             <script>
                 function nextPage() {
                     window.location.href = "yes.html";
                 }
 
-                function moveutton() {
+                function moveButton() {
                     var x = Math.random() * (window.innerWidth - document.getElementById('noButton').offsetWidth) - 85;
                     var y = Math.random() * (window.innerHeight - document.getElementById('noButton').offsetHeight) - 48;
                     document.getElementById('noButton').style.left = `${x}px`;
                     document.getElementById('noButton').style.top = `${y}px`;
+                }
+                
+                function nextPage2() {
+                    window.location.href = "no.html";
                 }
             </script>
         </div>
